--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -13,12 +13,12 @@ if (flutterRoot == null) {
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
 if (flutterVersionCode == null) {
-    flutterVersionCode = '1'
+    flutterVersionCode = '2'
 }
 
 def flutterVersionName = localProperties.getProperty('flutter.versionName')
 if (flutterVersionName == null) {
-    flutterVersionName = '1.0'
+    flutterVersionName = '1.2'
 }
 
 apply plugin: 'com.android.application'
@@ -73,9 +73,9 @@ flutter {
 }
 repositories {
     mavenCentral()
-    flatDir {
-        dirs 'libs'
-    }
+//    flatDir {
+//        dirs 'libs'
+//    }
 }
 
 dependencies {
@@ -98,7 +98,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     // Constraint Layout
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation 'com.android.library:FawrySDK_1.0.29.5_20092020@aar'
+//    implementation 'com.android.library:FawrySDK_1.0.29.5_20092020@aar'
 
 
 }
