--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter application.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 1.0.2+2
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -17,7 +17,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   intl_phone_number_input: ^0.5.1
-  flutter_svg: ^0.19.0
   http: ^0.12.0+2
   get_it: ^1.0.3
   provider: ^4.3.1
@@ -34,7 +33,6 @@ dependencies:
   flutter_range_slider: "^1.5.0"
   cloud_firestore: ^0.13.0+1
   firebase_storage: ^3.1.5
-  webview_flutter: ^0.3.23
   uuid: ^2.2.2
   image_cropper: ^1.2.2
   firebase_messaging: ^6.0.13
@@ -45,6 +43,11 @@ dependencies:
   image_picker: ^0.6.7+12
   photo_view: ^0.9.2
   pretty_dio_logger: ^1.1.1
+  webview_flutter: ^0.3.23
+  flutter_svg: ^0.18.0
+
+  flutter_html: 1.0.2
+
 
   multipart_request: ^0.3.1
   flutter_secure_storage: ^3.3.5
@@ -53,6 +56,7 @@ dependencies:
 
   flutter_localizations:
     sdk: flutter
+
 
 
 
